--- a/ecs_ec2_config/updated_ecs_ec2_config.yaml
+++ b/ecs_ec2_config/updated_ecs_ec2_config.yaml
@@ -26,8 +26,8 @@ extensions:
 
 receivers:
   # The fluentforward receiver can be used to forward logs from the Docker fluentd logging driver.
-  fluentforward:
-    endpoint: 0.0.0.0:18006
+#  fluentforward:
+#    endpoint: 0.0.0.0:18006
   hostmetrics:
     collection_interval: 1s
     scrapers:
@@ -48,8 +48,8 @@ receivers:
     protocols:
       grpc:
         endpoint: 0.0.0.0:14250
-      thrift_http:
-        endpoint: 0.0.0.0:14268
+#      thrift_http:
+#        endpoint: 0.0.0.0:14268
   otlp:
     protocols:
       grpc:
@@ -62,7 +62,7 @@ receivers:
     config:
       scrape_configs:
         - job_name: 'otel-collector'
-          scrape_interval: 10s
+          scrape_interval: 1s
           static_configs:
             - targets: ['0.0.0.0:8888']
           metric_relabel_configs:
@@ -80,8 +80,8 @@ receivers:
     # Whether to preserve incoming access token and use instead of exporter token
     # default = false
     #access_token_passthrough: true
-  zipkin:
-    endpoint: 0.0.0.0:9411
+#  zipkin:
+#    endpoint: 0.0.0.0:9411
   smartagent/signalfx-forwarder:
     type: signalfx-forwarder
     listenAddress: 0.0.0.0:9080
@@ -152,7 +152,8 @@ service:
   extensions: [health_check, http_forwarder, zpages, memory_ballast]
   pipelines:
     traces:
-      receivers: [jaeger, otlp, zipkin, smartagent/signalfx-forwarder]
+      #receivers: [jaeger, otlp, zipkin, smartagent/signalfx-forwarder]
+      receivers: [jaeger, otlp, smartagent/signalfx-forwarder]
       processors:
         - memory_limiter
         - batch
@@ -168,7 +169,8 @@ service:
       processors: [memory_limiter, batch, filter, resourcedetection/internal]
       exporters: [signalfx]
     logs:
-      receivers: [otlp, fluentforward]
+      #receivers: [otlp, fluentforward]
+      receivers: [otlp]
       processors:
         - memory_limiter
         - batch
