--- a/ecs_ec2_config/updated_ecs_ec2_config.yaml
+++ b/ecs_ec2_config/updated_ecs_ec2_config.yaml
@@ -10,14 +10,14 @@ config_sources:
 
 extensions:
   health_check:
-    endpoint: 0.0.0.0:13133
+    endpoint: 0.0.0.0:20001
   http_forwarder:
     ingress:
-      endpoint: 0.0.0.0:6060
+      endpoint: 0.0.0.0:20002
     egress:
       endpoint: "https://api.${SPLUNK_REALM}.signalfx.com"
   zpages:
-    endpoint: 0.0.0.0:55679
+    endpoint: 0.0.0.0:20003
   memory_ballast:
     # In general, the ballast should be set to 1/3 of the collector's memory, the limit
     # should be 90% of the collector's memory.
@@ -47,15 +47,15 @@ receivers:
   jaeger:
     protocols:
       grpc:
-        endpoint: 0.0.0.0:14250
-#      thrift_http:
-#        endpoint: 0.0.0.0:14268
+        endpoint: 0.0.0.0:20005
+      thrift_http:
+        endpoint: 0.0.0.0:20006
   otlp:
     protocols:
       grpc:
-        endpoint: 0.0.0.0:4317
+        endpoint: 0.0.0.0:20007
       http:
-        endpoint: 0.0.0.0:4318
+        endpoint: 0.0.0.0:20008
   # This section is used to collect the OpenTelemetry Collector metrics
   # Even if just a Splunk APM customer, these metrics are included
   prometheus/internal:
@@ -76,15 +76,15 @@ receivers:
               regex: 'otelcol_processor_batch_.*'
               action: drop
   signalfx:
-    endpoint: 0.0.0.0:9943
+    endpoint: 0.0.0.0:20010
     # Whether to preserve incoming access token and use instead of exporter token
     # default = false
     #access_token_passthrough: true
 #  zipkin:
-#    endpoint: 0.0.0.0:9411
+#    endpoint: 0.0.0.0:20011
   smartagent/signalfx-forwarder:
     type: signalfx-forwarder
-    listenAddress: 0.0.0.0:9080
+    listenAddress: 0.0.0.0:20012
   smartagent/ecs-metadata:
     type: ecs-metadata
     metadataEndpoint: "${env:ECS_TASK_METADATA_ENDPOINT}"
